# TinyFoundationModelForBioSignals

./: .coverage  .gitignore  .pre-commit-config.yaml  ALL_ISSUES_RESOLVED.md  BUGFIX_SUMMARY.md  BUILD_WINDOWS_GUIDE.md  BUTPPG_FIX_SUMMARY.md  BUTPPG_IMPLEMENTED.md  CHANNEL_INFLATION_FIX.md  CLAUDE.md  COLAB_ACTIONS.md  COMPLETE_FIX_SUMMARY.md  CRITICAL_API_FIX.md  CRITICAL_FIXES.md  CRITICAL_FIX_APPLIED.md  DATA_KEY_FIX.md  DATA_PIPELINE_GUIDE.md  DOWNSTREAM_EVALUATION_GUIDE.md  DOWNSTREAM_TASKS_AND_BENCHMARKS.md  EVALUATION_IMPLEMENTATION_SUMMARY.md  EVALUATION_QUICKREF.md  FINAL_FIX_SUMMARY.md  FINAL_STATUS.md  FINETUNE_AUDIT_REPORT.md  FINETUNE_SCRIPT_FIX.md  FIX_SUMMARY.md  HANDOFF_UNFREEZING_FIX.md  QA_AUDIT_REPORT.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REVIEW_AND_COMPATIBILITY.md  SSL_ARCHITECTURE_REVIEW.md  SSL_MODULE_COMPLETE_REVIEW.md  SSL_PRETRAIN_QUICKSTART.md  URGENT_FIX.md  VITALDB_FIX_SUMMARY.md  VITALDB_INTERVAL_FIX.md  WHAT_TO_DO_NOW.md  coverage.xml  (+16 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: channels.yaml  default.yaml  fasttrack_cpu.yaml  model.yaml  run.yaml  run_vae.yaml  smoke_synthetic.yaml  ssl_pretrain.yaml  ssl_pretrain_ibm_enhanced.yaml  windows.yaml
configs/dataset/: capture24.yaml
configs/model/: ttm.yaml
configs/splits/: splits_fallback.json  splits_full.json
configs/tasks/: blood_pressure.yaml  hypotension.yaml
configs/training/: full_finetune.yaml  linear_probe.yaml  lp_then_ft.yaml
deprecated/: ttm_vitaldb_multiprocess.py
deprecated/configs/: channels.yaml  model_high_accuracy.yaml  model_vae.yaml
deprecated/data/: butppg_loader.py  butppg_quality_dataset.py  detect.py  filters.py  label_alignment.py  sync.py  unified_window_loader.py  vitaldb_dataset.py  windows.py
docs/: ARCHITECTURE.md  BUT_PPG_PIPELINE.md  WORKFLOW.md  butppg_finetuning_guide.md  channel_inflation_guide.md  gap8_summary.md  ssl_pretraining_guide.md
examples/: quick_start_tasks.py  quickstart.py  ttm_usage.py
notebooks/: ttm_har_extended_notebook.ipynb  ttm_reproduction_visual.ipynb
scripts/: FINETUNE_READY.md  IMPORT_FIXES.md  PIPELINE_GUIDE.md  PIPELINE_VERIFICATION.md  QUICK_TEST_README.md  TTM_VITALDB_USAGE.md  apply_vitaldb_fix.py  benchmark_comparison.py  build_butppg_windows.py  build_windows_quiet.py  check_butppg_data.py  check_butppg_recording_lengths.py  check_checkpoint_architecture.py  check_ssl_features.py  check_ssl_ready.py  check_status.py  check_vitaldb_checkpoint.py  clean_and_test.py  cleanup_corrupted_data.py  clear_cache.py  compare_training_modes.sh  complete_fix.py  continue_ssl_butppg.py  continue_ssl_butppg_quality.py  convert_checkpoint_for_multitask.py  create_butppg_windows_with_labels.py  create_mock_butppg_data.py  create_vitaldb_windows_with_labels.py  debug_imports.py  debug_ttm_output.py  debug_vitaldb.py  demo_pipeline_flow.py  demo_ssl_components.py  diagnose_butppg_record_ids.py  diagnose_colab_imports.py  diagnose_eval_labels.py  diagnose_ttm_config.py  diagnose_ttm_loading.py  diagnose_vitaldb_structure.py  diagnose_windows.py  (+112 more)
src/: __init__.py
test_checkpoints/: epoch_1.pt  epoch_1_best.pt
test_ttm_reproduction/: __init__.py  test_determinism.py  test_metrics.py  test_shapes.py
tests/: .coverage.Alis-MacBook-Pro.local.58637.XbcqWwQx  .coverage.Alis-MacBook-Pro.local.58652.XFvxclax  .coverage.Alis-MacBook-Pro.local.58720.XlFGlolx  README.md  README_TESTING.md  TESTING_COMPARISON.md  TEST_FIXES_SUMMARY.md  __init__.py  conftest.py  debug_template_corr.py  quick_fix_verification.py  run_all_phases.py  run_data_prep_tests.py  run_ssl_tests.py  test_butppg_clinical_labels.py  test_butppg_dataset.py  test_butppg_fixes.py  test_butppg_label_loading.py  test_butppg_loader_enhanced.py  test_calibration.py  test_channel_utils.py  test_datasets.py  test_decoders.py  test_detect.py  test_e2e_real_data.py  test_filters.py  test_fixes.py  test_label_alignment.py  test_metrics.py  test_neurokit_integration.py  test_phase0_setup.py  test_phase1_data_prep.py  test_phase2_ssl_smoke.py  test_phase3_finetune_smoke.py  test_quality.py  test_runner.py  test_smoke_full_system.py  test_splits.py  test_ssl_masking.py  test_ssl_objectives.py  (+14 more)
ttm_har.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+201 files in other folders)
