[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttm-vitaldb"
version = "0.1.0"
description = "TTM Foundation Model for VitalDB Biosignals"
authors = [{name = "TTM-VitalDB Team"}]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "scipy>=1.9.0",
    "pandas>=1.5.0",
    "vitaldb>=1.3.0",
    "neurokit2>=0.2.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.6.0",
    "scikit-learn>=1.2.0",
    "tinytimemixers>=0.1.0",
    "pyarrow>=10.0.0",
    "numpy<2.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.ruff]
line-length = 120
target-version = "py38"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
